2001-02-24  Douglas Bates  <bates@stat.wisc.edu>

	* R/newFunc.R: Removed the old fake xyplot function.  The new work
	by Murrell and Sarkar will make this superfluous.

	* man/MEestimate.Rd: Added manual pages for MEEM, MEdecomp,
	MEestimate.

	* R/newMethods.R: Revised assignments in plotting methods to be
	compatible with the Murrell/Sarkar preliminary trellis package.

	* src/nlmefit.c (internal_decomp): Corrected an error reported by
	Kathryn Chaloner where Srows >= ZXrows.

2001-01-10  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION (Maintainer): Added Maintainer entry to
	DESCRIPTION. 

2000-12-09  Douglas Bates  <bates@stat.wisc.edu>

	* R/lme.R: (Variogram.lme) Coerced n.pairs to numeric and
	corrected calls to dist.

2000-12-08  Douglas Bates  <bates@stat.wisc.edu>

	* R/lme.R: Changed all calls to dist in lme.R, gls.R and
	corStruct.R to use the argument "method" rather than "metric".

	* R/pdMat.R: Replaced calls to .Fortran("dbksl", ...) with calls
	to the R function solve() for R-1.2.0 where the S_compat.c file
	has been removed.

	* inst/scripts/ch01.R: Added the chapter scripts from
	"Mixed-Effects Models in S and S-PLUS" to the inst directory.

	* man/formula.nlme.Rd: Modified the examples in this and many
	other .Rd files to use the Loblolly data and the SSasymp
	self-starting function.  There were many occasions where the
	Soybean data was being fit to a default formulation of an nlme
	model just to get things like a formula.  This fit of the Soybean
	data is difficult and time consuming and not very illuminating.

2000-11-30  Douglas Bates  <bates@stat.wisc.edu>

	* src/matrix.c: Removed dependency on S_compat.h by replacing
	calls to dqrdca with the equivalent call to dqrdc2.
	
2000-07-24  Saikat DebRoy <saikat@stat.wisc.edu>

	* Changed various uses of do.call to eval.  The reason for doing
	this is to allow calls to the function calling eval from within
	another function.  It's the old scoping problem again.
