@@ -1,4 +1,4 @@
-% $Id: plot.lmList.Rd,v 1.5 2001/01/10 19:21:05 bates Exp $
+% $Id: plot.lmList.Rd,v 1.6 2001/03/30 16:50:52 bates Exp $
 \name{plot.lmList}
 \title{Plot an lmList Object}
 \usage{
