@@ -1,8 +1,8 @@
-% $Id: print.anova.lme.Rd,v 1.4 2000/07/03 18:22:48 bates Exp $
+% $Id: print.anova.lme.Rd,v 1.5 2001/03/30 16:50:52 bates Exp $
 \name{print.anova.lme}
 \title{Print an anova.lme Object}
 \usage{
-print(x, verbose)
+\method{print}{anova.lme}(x, verbose, \dots)
 }
 \alias{print.anova.lme}
 \arguments{
@@ -13,6 +13,7 @@ print(x, verbose)
    sequences for each fitted model object are printed with the rest of
    the output, being omitted if \code{verbose = FALSE}. Defaults to
    \code{attr(x, "verbose")}.}
+ \item{\dots}{other, optional arguments to the \code{print} generic.}
 }
 \description{
   When only one fitted model object is used in the call to
@@ -25,11 +26,8 @@ print(x, verbose)
   object is printed. If included in \code{x}, likelihood ratio
   statistics, with associated p-values, are included in the output.   
 }
-
 \author{Jose Pinheiro and Douglas Bates}
-
-\seealso{\code{\link{anova.lme}}, \code{\link{lme}}}
-
+\seealso{\code{\link{anova.lme}}, \code{\link{lme}}, \code{\link[base]{print}}}
 \examples{
 data(Orthodont)
 fm1 <- lme(distance ~ age * Sex, Orthodont, random = ~ age | Subject)
